Roles, Simple Delete
Authorization, user authentication by simplememeber and
simpleroleprovider
Handling the roles in the views
Delete by checkboxes
Default View acces is overrided for safe datafilling

--- a/CarDealer/CarDealer/Content/Styles/Site.css
+++ b/CarDealer/CarDealer/Content/Styles/Site.css
@@ -223,8 +223,6 @@ a:hover {
     width: 80%;
 }
 
-
-
 .errorMessage {
     color: red;
     font-size: 12px;
@@ -254,3 +252,8 @@ a:hover {
     text-overflow: ellipsis;
     width: 100px;
 }
+
+/*marker classes:*/
+.deleteCHB {}
+/*marker classes END:*/
+
