--- a/CarDealer/CarDealer/Views/Car/Create.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Create.cshtml
@@ -49,6 +49,7 @@
     @using (Html.BeginForm("Create", "Car", FormMethod.Post, new { id = "CreateForm" }))
     { 
         @Html.ValidationSummary(true)
+        @Html.AntiForgeryToken() 
         <fieldset>
             <legend></legend>
             <div>
