--- a/CarDealer/CarDealer/Views/Car/ListDataContainer.cshtml
+++ b/CarDealer/CarDealer/Views/Car/ListDataContainer.cshtml
@@ -1,9 +1,28 @@
 ﻿@model IEnumerable<CarDealerProject.Models.Car>
 
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#DeleteAllSelectedForm').on('submit', function () {
+            var ids = [];
+
+            $('.deleteCHB input:checked').each(function () {
+                ids.push(this.id.split("_")[1]);
+            });
+
+            $("#idsForDelete").val(ids);
+        });
+
+
+        $('#CHB_CheckUncheckAll').on('change', function () {
+            $('.deleteCHB input:checkbox').prop('checked', this.checked);
+        });
+    });
+</script>
+
 <h2>Cars</h2>
 @if (!@Model.Any())
 {
-    <h2 class="center"> There is no data to display </h2>
+    <h2 class="center">There is no data to display </h2>
 }
 else
 {
@@ -11,9 +30,15 @@ else
     <table>
         <tr>
             <th>
+                @if (User.IsInRole("Admin"))
+                {
+                    @Html.CheckBox("CHB_CheckUncheckAll")
+                }
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Brand)
             </th>
-            <th >
+            <th>
                 @Html.DisplayNameFor(model => model.Model)
             </th>
             <th>
@@ -33,11 +58,17 @@ else
             </th>
             <th></th>
         </tr>
-    
+
         @foreach (var item in Model)
         {
             <tr>
-                <td class="crop" style="width: 70px;">
+                <td class="crop deleteCHB" style="width: 10px;">
+                    @if (User.IsInRole("Admin"))
+                    {
+                        @Html.CheckBox("CHB_" + item.Id)
+                    }
+                </td>
+                <td class="crop" style="width: 60px;">
                     @Html.DisplayFor(modelItem => item.Brand)
                 </td>
                 <td class="crop" style="width: 60px;">
@@ -56,15 +87,30 @@ else
                     @Html.DisplayFor(modelItem => item.CarNumber)
                 </td>
                 <td class="crop" style="width: 120px;">
-                    @Html.ActionLink(item.CarDealerName, "Details", "CarDealer", new {id = item.CarDealerId}, new object())
+                    @Html.ActionLink(item.CarDealerName, "Details", "CarDealer", new { id = item.CarDealerId }, new object())
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                    @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                    @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <span>| </span> 
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) 
+                        <span>| </span>
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    }
                 </td>
             </tr>
         }
-    
+
     </table>
+        if (User.IsInRole("Admin"))
+        {
+            using (Html.BeginForm("DeleteAllByIds", "Car", FormMethod.Post, new { Id = "DeleteAllSelectedForm" }))
+            {
+    <input type="hidden" name="idsForDelete" id="idsForDelete" />
+    <input type="submit" value="Delete all selected" />
+            }
+        }
+
 }
