--- a/CarDealer/CarDealer/Views/Car/Details.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Details.cshtml
@@ -11,6 +11,10 @@
 
 <p class="center">
     <br />
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "All")
+    @Html.ActionLink("Back to List", "All") 
+    @if(User.IsInRole("Admin"))
+    {
+        <span> | </span> 
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+    }
 </p>
