--- a/CarDealer/CarDealer/Views/CarDealer/Details.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Details.cshtml
@@ -9,6 +9,11 @@
 
 <p class="center">
     <br />
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+
     @Html.ActionLink("Back to List", "All")
+    @if(User.IsInRole("Admin"))
+    {
+        <span> | </span> 
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) 
+    }
 </p>
