--- a/CarDealer/CarDealer/Views/CarDealer/ListDataContainer.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/ListDataContainer.cshtml
@@ -1,47 +1,39 @@
 ﻿@model IEnumerable<CarDealerProject.Models.CarDealer>
 
-<script>
-    
-    //TODO LATER  - delete all chekced
-    //$(document).ready(function () {
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#DeleteAllSelectedForm').on('submit', function () {
+            var ids = [];
 
-    //    $('#deleteAllSelected').on('click', function() {
-    //        var ids = [];
+            $('.deleteCHB input:checked').each(function () {
+                ids.push(this.id.split("_")[1]);
+            });
 
-    //        $('input:checked').each(function() {
-    //            ids.push(this.id);
-    //        });
-    //        $("#ids").val(ids);
-    //        submitFormGetPartView();
-    //    });
-        
-    //    function submitFormGetPartView() {
-    //        var jdata = { 'ids': [] };
-    //        $('input:checked').each(function() {
-    //            jdata['ids'].push(this.id);
-    //        });
-            
-    //        $.post({
-    //            url: "DeleteAll",
-    //            type: "POST",
-    //            dataType: "json",
-    //            traditional: true,
-    //            data: jdata
-    //        });
-    //    }
-    //})
-   
+            $("#idsForDelete").val(ids);
+        });
+
+        $('#CHB_CheckUncheckAll').on('change', function () {
+            $('.deleteCHB input:checkbox').prop('checked', this.checked);
+        });
+    });
 </script>
 
 <h2>Car dealerships</h2>
 @if (!@Model.Any())
 {
-    <h2 class="center"> There is no data to display </h2>
+    <h2 class="center">There is no data to display </h2>
 }
 else
 {
     <table id="CarDealersTable" class="left">
         <tr>
+            <th>
+                @if (User.IsInRole("Admin"))
+                {
+                    @Html.CheckBox("CHB_CheckUncheckAll")
+                }
+
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -54,20 +46,26 @@ else
             <th>
                 @Html.DisplayNameFor(model => model.City)
             </th>
-        
+
             <th></th>
         </tr>
 
         @foreach (var item in Model)
         {
             <tr>
+                <td class="crop deleteCHB" style="width: 10px;">
+                    @if (User.IsInRole("Admin"))
+                    {
+                        @Html.CheckBox("CHB_" + item.Id)
+                    }
+                </td>
                 <td class="crop" style="width: 150px;">
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td class="crop" style="width: 110px;">
                     @Html.DisplayFor(modelItem => item.ParkingPlaces)
                 </td>
-                <td class="crop" style="width: 120px;">
+                <td class="crop" style="width: 110px;">
                     @Html.DisplayFor(modelItem => item.Telephone)
                 </td>
                 <td class="crop" style="width: 130px;">
@@ -75,12 +73,26 @@ else
                 </td>
 
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                    @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                    @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <span>| </span>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                        <span>| </span>
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    }
                 </td>
             </tr>
         }
 
     </table>
+        if (User.IsInRole("Admin"))
+        {
+            using (Html.BeginForm("DeleteAllByIds", "CarDealer", FormMethod.Post, new { Id = "DeleteAllSelectedForm" }))
+            {
+    <input type="hidden" name="idsForDelete" id="idsForDelete" value="1,2" />
+    <input type="submit" value="Delete all selected" id="deleteAllSelected" />
+            }
+        }
+
 }
