--- a/CarDealer/CarDealer/Views/CarDealer/Search.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/Search.cshtml
@@ -14,13 +14,13 @@
         </div>
 
         <div class="textSet">
-            @Html.Label("Country")<br />
-            @Html.DropDownList("Country", TempData["Countries"] as IEnumerable<SelectListItem>)
+            @Html.Label("Country")<br /> 
+            @Html.DropDownList("Country", (TempData["Countries"] ?? new List<SelectListItem>() ) as IEnumerable<SelectListItem>)
         </div>
 
         <div class="textSet">
             @Html.Label("City")<br />
-            @Html.DropDownList("City", TempData["Cities"] as IEnumerable<SelectListItem>)
+            @Html.DropDownList("City", (TempData["Cities"] ?? new List<SelectListItem>() ) as IEnumerable<SelectListItem>)
         </div>
 
         <div class="textSet">
