--- a/CarDealer/CarDealer/Views/Shared/_Layout.cshtml
+++ b/CarDealer/CarDealer/Views/Shared/_Layout.cshtml
@@ -1,35 +1,59 @@
-﻿<!DOCTYPE html>
+﻿@using CarDealerProject.Models
+<!DOCTYPE html>
 
 <html>
 <head>
     <title>@ViewBag.Title</title>
+
     <meta name="viewport" content="width=device-width" />
-    <link href="@Url.Content("~/Content/Styles/Site.css")" rel="stylesheet" type="text/css" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF8">
+
     <script src="@Url.Content("~/Scripts/jquery-1.8.2.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
     <script src="@Url.Content("~/Scripts/jquery-ui-1.8.24.js")" type="text/javascript"></script>
+
     <link href="@Url.Content("~/Content/Themes/base/jquery-ui.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/Styles/Site.css")" rel="stylesheet" type="text/css" />
 
     <script src="@Url.Content("~/Scripts/JSHelper.js")" type="text/javascript"></script>
 
+    <script type="text/javascript">
+        $(document).ready(function () {
+            @if (TempData["ErrorMessage"] != null)
+            {
+                var formattedMessage = MvcHtmlString.Create(Html.Encode(TempData["ErrorMessage"]));
+            @Html.Raw("showMessageBox('Warning','" + formattedMessage + "');")
+            }
+            @if (TempData["Message"] != null)
+            {
+                var formattedMessage = MvcHtmlString.Create(Html.Encode(TempData["Message"]));
+            @Html.Raw("showMessageBox('Info','" + formattedMessage + "');")
+            }
+        });
+    </script>
 </head>
-<body class="wrap">
-    <div class="header center"></div>
+    <body class="wrap">
+        <div class="right">
+            @{Html.RenderPartial("Login", new User());}
+        </div>
 
-    <div class="menu center">
-        <span class="menuItem"> @Html.ActionLink("Home", "Index", "Home")  </span> 
-        <span class="menuItem"> @Html.ActionLink("Car Dealerships", "Index", "CarDealer")  </span> 
-        <span class="menuItem"> @Html.ActionLink("Cars", "Index", "Car")</span>
-    </div>
+        <div class="header center">
+       
+        </div>
 
-    <div>
-        @RenderBody()
-    </div>
+        <div class="menu center">
+            <span class="menuItem">@Html.ActionLink("Home", "Index", "Home")  </span>
+            <span class="menuItem">@Html.ActionLink("Car Dealerships", "Index", "CarDealer")  </span>
+            <span class="menuItem">@Html.ActionLink("Cars", "Index", "Car")</span>
+        </div>
 
-    <div class="clear"></div>
+        <div>
+            @RenderBody()
+        </div>
 
-    <div class="footer center"></div>
-</body>
+        <div class="clear"></div>
+
+        <div class="footer center"></div>
+    </body>
 </html>
